# tty-interface

./: .gitignore  Cargo.toml  README.md
.devcontainer/: devcontainer.json
.github/workflows/: rust_cd.yml  rust_ci.yml
docs/: releasing.md
examples/: alternate.rs  basic.rs  counting.rs  helloworld.rs  messages.rs  multistep.rs  multiupdate.rs  relative.rs  style.rs
examples/common/: mod.rs
src/: config.rs  cursor.rs  device.rs  format.rs  interface.rs  layout.rs  lib.rs  line.rs  mode.rs  position.rs  result.rs  segment.rs  state.rs  style.rs  terminal.rs  test.rs  text.rs  update.rs  utility.rs  vector.rs
tests/: integration_test.rs
