[package]
description = "Provides simple TTY-based interface capabilities including partial re-renders of multi-line displays."
authors = ["Daniel Way <contact@danieldway.com>"]
name = "tty-interface"
version = "4.0.0-beta.3"
license = "MIT"
edition = "2021"
repository = "https://github.com/danielway/tty-interface"
exclude = [".github"]

[dependencies]
crossterm = "0.25.0"
unicode-segmentation = "1.9.0"
unicode-width = "0.1.9"
vt100 = "0.15.1"
