[package]
description = "Provides simple TTY-based interface capabilities including partial re-renders of multi-line displays."
authors = ["Daniel Way <contact@danieldway.com>"]
name = "tty-interface"
version = "4.0.2"
license = "MIT"
edition = "2024"
repository = "https://github.com/danielway/tty-interface"
exclude = [".github"]

[dependencies]
crossterm = "0.29.0"
unicode-segmentation = "1.12.0"
unicode-width = "0.2.1"
vt100 = "0.16.2"
thiserror = "2.0.16"

[dev-dependencies]
rand = "0.9.2"
